@@ -7,14 +7,14 @@
 '\" RCS: @(#) $Id$
 '\" 
 .so man.macros
-.TH "platform::shell" n 1.0.2 platform::shell "Tcl Bundled Packages"
+.TH "platform::shell" n 1.1.3 platform::shell "Tcl Bundled Packages"
 .BS
 '\" Note:  do not modify the .SH NAME line immediately below!
 .SH NAME
 platform::shell \- System identification support code and utilities
 .SH SYNOPSIS
 .nf
-\fBpackage require platform::shell ?1.0.1?\fR
+\fBpackage require platform::shell ?1.1.3?\fR
 .sp
 \fBplatform::shell::generic \fIshell\fR
 \fBplatform::shell::identify \fIshell\fR
